    * 0101 liebert_chiller_status: New check for Liebert Chiller devices
    * 0083 brocade_mlx: Temperature sensors of one module now in one common check...
    * 0008 df: Solaris agent now also supports samfs
    * 0084 brocade_mlx: single checks now instead of sub checks...
    * 0291 winperf_ts_sessions: New check to monitor Microsoft Terminal Server sessions...
    * 0024 FIX: cisco_wlc: removed check configuration parameter ap_model...
    * 0003 FIX: ps: Remove exceeding [ and ] in service description when using process inventory...
    * 0037 FIX: checkman browser (cmk -m) was not working properly in network subtree...
    * 0283 FIX: Interface Checks: ignore invalid error counts while interface is down...
    * 0081 FIX: Fixed corruption in SNMP walks created with cmk --snmpwalk...
    * 0286 FIX: esx_vsphrere_counters.ramdisk: Better handling for non existant ramdisks...
    * 0290 FIX: winperf_processor mem.win: Handling no/empty agent responses correctly now...

    Multisite:
    * 0001 New filters for selecting several host/service-groups at once...
    * 0050 New concept of favorite hosts and services plus matching filters and views...
    * 0211 GUI Notify: Added notify method "popup" to really create popup windows...
    * 0215 Added option to make HTML escape in plugin outputs configurable...
    * 0071 livedump: new option to include contact_groups instead of contacts when dumping configuration
    * 0043 FIX: LDAP: Improved error reporting during synchronisation...
    * 0044 FIX: LDAP: Fixed error with empty groups during non nested group sync...
    * 0045 FIX: LDAP: Fixed error when synchronizing non nested groups to roles...
    * 0046 FIX: Fixed editing contactgroup assignments of hosts or folders with "-" in names...
    * 0049 FIX: Fixed useless I/O during page processing...
    * 0203 FIX: Changed sidebar reload interval to be more random...
    * 0204 FIX: Reduced I/O on logins with access time recording or failed login counts...