@@ -1,0 +1,9 @@
+Title: modbus_value: New check and Agent to modbus devices
+Level: 1
+Component: checks
+Version: 1.2.3i7
+Date: 1385765918
+Class: feature
+
+This is the first approach to monitor modbus devices. Modbus is an industry bus wich can
+be found for example in power devices for buildings.
