@@ -1,0 +1,17 @@
+title: Modbus value
+agents: modbus
+catalog: hw/environment
+license: GPL
+distribution: check_mk
+description:
+ This check is the first approach to monitor the Modbus. Modbus is an Industry Bus which
+ can be used to query information. To get that information, you will find agent_modbus in
+ the agent/special directory. This Check currently can handle gauge and counter data.
+ If you set no levels, only a pnp graph will be created and the check anytimes shows {OK}.
+
+inventory:
+ One service will be created for each value
+
+examples:
+#Default levels 300, 350
+modbus_value_default_levels = ( 300, 350 )
