@@ -35,6 +35,7 @@
     * 0008 df: Solaris agent now also supports samfs
     * 0084 brocade_mlx: single checks now instead of sub checks...
     * 0291 winperf_ts_sessions: New check to monitor Microsoft Terminal Server sessions...
+    * 0102 modbus_value: New check and Agent to modbus devices...
     * 0024 FIX: cisco_wlc: removed check configuration parameter ap_model...
     * 0003 FIX: ps: Remove exceeding [ and ] in service description when using process inventory...
     * 0037 FIX: checkman browser (cmk -m) was not working properly in network subtree...
